@@ -1,5 +1,8 @@
 package bd.settings;
 
+import java.lang.reflect.InvocationTargetException;
+
+
 /**
  * VmSettings are determined based on Java properties. They are used to configure VM-wide
  * properties, for instance whether a tool is enabled or not.
@@ -21,8 +24,10 @@ public class VmSettings {
 
     try {
       Class<?> clazz = Class.forName(className);
-      return (Settings) clazz.newInstance();
-    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+      return (Settings) clazz.getDeclaredConstructor().newInstance();
+    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+        | IllegalArgumentException | InvocationTargetException | NoSuchMethodException
+        | SecurityException e) {
       // Checkstyle: stop
       System.err.println("[BlackDiamonds] Could not load settings class: " + className);
       e.printStackTrace();
